Fix some spacing in the css

--- a/css/main.css
+++ b/css/main.css
@@ -251,6 +251,9 @@ body{
     align-items: stretch;
     padding: 10vh 0;
 }
+    .team h2{
+        font-size: 2.5rem;
+    }
 
     .people-cards{
         height: 100%;
@@ -273,6 +276,7 @@ body{
         .people-card img{
             width : 100%;
         }
+        
             .people-card button{
                 padding: 15px;
                 width: 100%;
@@ -312,6 +316,7 @@ body{
     padding: 5vh;
     min-height: 30vh;
 }
+
     .stats h2{
         text-align: center;
     }
@@ -322,6 +327,7 @@ body{
     width: 100%;
     min-height: 80%;
 }
+
     .our-work .img-showcase{
         display: grid;
         gap:1em;
@@ -451,19 +457,24 @@ body{
     padding: 4em;
     text-align: center;
 }
+
     .contacts{
         list-style-type: none;
     }
+
         .contact h3{
             font-size: 2rem;
         }
+
         .contacts li{
             display: flex;
             padding: 20px;
         }
+        
         .contacts i{
             font-size: 1.4rem;
         }
+
         .contacts p{
             padding: 0 .4rem;
         }
